cmake_minimum_required(VERSION 3.9)
project(OOP_CPP_EX2)

set(CMAKE_CXX_STANDARD 11)

add_executable(OOP_CPP_EX2 main.cpp PublicTransport.cpp PublicTransport.h Station.cpp Station.h IntercityStation.cpp IntercityStation.h CentralStation.cpp CentralStation.h StadStation.cpp StadStation.h mainFunctions.cpp mainFunctions.h)